[package]
name = "turbo"
authors = ["Quinn Horton <q.horton@uqmars.com>", "Jay 'Sealgair'"]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.1"
description = "A Discord bot developed for the UQ Mechatronics and Robotics Society"
license = "MIT"
repository = "https://github.com/uqmars/turbo"

[dependencies]
tokio = { version = "1.25.1", features = ["macros", "rt-multi-thread"] }
poise = "0.6.1"
rand = "0.8"
pyo3 = "0.17"

[dependencies.serenity]
version = "0.12.5"
default-features = false
features = ["client", "gateway", "rustls_backend", "model"]
